--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,18 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
+title: Closing the Loop
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Often, there's many unique situations that come up in 
+  my line of work. This site helps me "close the loop" of my 
+  thoughts and hopfully someone reading this finds the information
+  here helpful. Most content will be related to PowerShell since
+  that's my tool of choice these days.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://pauldedula.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+#twitter_username: 
+github_username: pauldedula
 
 # Build settings
 theme: minima
